--- a/FtcRobotController/src/main/AndroidManifest.xml
+++ b/FtcRobotController/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
           android:versionName="9.0">
 
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
+  <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="30" />
   <application
     android:allowBackup="true"
     android:largeHeap="true"
